Got degrees and school ratings done/fixed
